test/invalid/baseline/implements.txt
Syntax error at line 14 in implements.widl, since `interface EventTarget`:
  Node implements EventTarget;
  ^ Unrecognised tokens
